// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/form/Field Default smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
  </div>
</div>
`;

exports[`components/form/Field DisabledWithHint smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8 !text-grey-5">
        Description de l'action
      </div>
      <span class="block mt-2 text-xs text-grey-6 !text-grey-5">
        Texte description additionnel
      </span>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
  </div>
</div>
`;

exports[`components/form/Field WithError smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-error-1">
      <span class="flex mr-1 before:h-4 before:w-4 fr-icon-error-fill">
      </span>
      <span class="text-xs">
        Message d'erreur
      </span>
    </div>
  </div>
</div>
`;

exports[`components/form/Field WithHint smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
      <span class="block mt-2 text-xs text-grey-6">
        Texte description additionnel
      </span>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
  </div>
</div>
`;

exports[`components/form/Field WithInfo smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-info-1">
      <span class="flex mr-1 before:h-4 before:w-4 fr-icon-info-fill">
      </span>
      <span class="text-xs">
        Message d’information
      </span>
    </div>
  </div>
</div>
`;

exports[`components/form/Field WithSuccess smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-success-1">
      <span class="flex mr-1 before:h-4 before:w-4 fr-icon-success-fill">
      </span>
      <span class="text-xs">
        Message de succès
      </span>
    </div>
  </div>
</div>
`;

exports[`components/form/Field WithWarning smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-warning-1">
      <span class="flex mr-1 before:h-4 before:w-4 fr-icon-warning-fill">
      </span>
      <span class="text-xs">
        Message d'avertissement
      </span>
    </div>
  </div>
</div>
`;
